# hyperevm_cex_dex_estimation

./: .gitignore  README.md  calc_vol.py  calculate_markout.py  calculate_mid_price.py  derive_hype_usdt_mid.py  get_hyperliquid_bbos.py  get_hyperliquid_tickers_and_contracts.py  get_swap_events.py  get_swap_events_async_pipeline.py  get_swap_events_parallel.py  get_swap_events_parallel_multiple_csv.py  get_swap_events_via_block_receipt.py  hyperevm_data.yaml  markout_analsis.py  mev_stats.py  pyproject.toml
analysis_outputs/: rv_vs_pnl_stats.txt
datasets/: hyperliquid_quotes_2025-08-01_@166.csv
event_datasets_final_async/: swap_events_blockrcpt_list7_b57D_20250816.csv  swap_events_blockrcpt_list7_b57D_20250817.csv  swap_events_blockrcpt_list7_b57D_20250830.csv
mev_analysis/: rv_vs_searcher_pnl_stats.txt
presentation/: present.aux  present.fdb_latexmk  present.fls  present.nav  present.out  present.tex  present.toc
presentation/images_goal_2/: rv_vs_searcher_pnl_stats.txt
